--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bcrypt": "^5.0.1",
     "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mangodb": "^1.0.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.7",
     "next": "^12.1.0",
