--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-auth-next-authjs",
+  "name": "adelinked-socialnet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,7 +17,6 @@
     "@next-auth/mongodb-adapter": "^1.0.3",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
-    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
@@ -28,6 +27,7 @@
     "nodemailer": "^6.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "react-toastify": "^8.2.0",
     "rest": "^2.0.0"
   }
